# bb_league

./: .env.example  .gitignore  DESIGN_LOG.md  Makefile  PRD.md  README.md  babel.cfg  pyproject.toml  run.py  seed.py
.cursor/rules/: local-development.mdc  stack-backend.mdc  stack-frontend.mdc
app/: __init__.py  config.py  extensions.py
app/blueprints/: __init__.py  auth.py  bets.py  leagues.py  main.py  matches.py  prematch.py  teams.py
app/blueprints/api/: __init__.py  leagues.py  matches.py  teams.py
app/data/: inducements.json  skills.json  star_players.json  teams copy.json  teams.json  teamsAct.json  translations.json
app/forms/: __init__.py  auth.py  bet.py  league.py  match.py  team.py
app/models/: __init__.py  bet.py  league.py  match.py  player.py  prematch.py  team.py  user.py
app/schemas/: __init__.py
app/services/: scheduler.py  seed_data.py
app/static/css/: custom.css
app/static/js/: app.js
app/templates/: base.html
app/templates/auth/: login.html  profile.html  register.html
app/templates/bets/: ai_bet.html  ai_bet_preview.html  index.html  notifications.html  place_bet.html  view_bet.html
app/templates/errors/: 403.html  404.html  500.html
app/utils/: __init__.py  translations.py
migrations/versions/: abd97c1d9d6b_player_stats_delta_storage.py  dfb95a92d68f_add_notes_field_to_players.py
scripts/: bets_export_import.py  db_export_import.py  leagues_export_import.py  seed.py  seed_test_data.py  teams_export_import.py  upsert_user.py  users_export_import.py
tests/: __init__.py  conftest.py  test_basic.py
(+27 files in other folders)
