[project]
name = "blood-bowl-league-tracker"
version = "1.0.0"
description = "A web application to manage Blood Bowl leagues and tournaments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.5",
    "flask-jwt-extended>=4.6.0",
    "flask-restful>=0.3.10",
    "flask-wtf>=1.2.1",
    "flask-login>=0.6.3",
    "marshmallow>=3.20.1",
    "marshmallow-sqlalchemy>=0.29.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.1.2",
    "gunicorn>=21.2.0",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

